# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")

dfx_util_sources = [ "dfx_util.cpp" ]

if (defined(ohos_lite)) {
  static_library("dfx_util") {
    visibility = [ "*:*" ]
    include_dirs = [
      ".",
      "$faultloggerd_path/common",
      "$hilog_lite_include_path",
    ]
    sources = dfx_util_sources
    deps = [
      "$faultloggerd_path/common/dfxlog:static_common_log",
      "$hilog_lite_deps_path",
      "//third_party/bounds_checking_function:libsec_shared",
    ]
  }
} else {
  config("dfx_util_config") {
    visibility = [ ":*" ]
    include_dirs = [
      ".",
      "$faultloggerd_path/common",
      "$faultloggerd_path/common/dfxlog",
    ]
  }

  ohos_static_library("dfx_util") {
    sources = dfx_util_sources
    public_configs = [ ":dfx_util_config" ]
    deps = [ "$faultloggerd_path/common/dfxlog:static_common_log" ]
    external_deps = [
      "c_utils:utils",
      "hilog_native:libhilog",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }

  ohos_static_library("dfx_util_static") {
    sources = dfx_util_sources
    public_configs = [ ":dfx_util_config" ]
    deps = [ "$faultloggerd_path/common/dfxlog:static_hilog_base" ]
    external_deps = [
      "c_utils:utils",
      "hilog_native:libhilog_base",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }
}
