# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("log_wrapper_config") {
  visibility = [ ":*" ]
  include_dirs = [ "." ]
}

ohos_static_library("static_log_wrapper") {
  sources = [ "log_wrapper.c" ]
  public_configs = [ ":log_wrapper_config" ]
  external_deps = [
    "hilog_native:libhilog_base",
    "utils_base:utils",
  ]
  part_name = "faultloggerd"
  subsystem_name = "hiviewdfx"
}
