# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")

dfx_dwarf_sources = [ "dwarf.cpp" ]

if (defined(ohos_lite)) {
  source_set("dfx_dwarf_src") {
    visibility = [ "*:*" ]

    include_dirs = [
      "include",
      "$c_utils_include_path",
      "$faultloggerd_common_path/dfxlog",
      "$faultloggerd_common_path/dfxutil",
      "$faultloggerd_frameworks_path/unwind/include",
      "$faultloggerd_interfaces_path/common",
      "$hilog_lite_include_path",
    ]

    sources = dfx_dwarf_sources

    deps = [
      "$faultloggerd_common_path/dfxlog:dfx_hilog",
      "$faultloggerd_frameworks_path/unwind:dfx_unwind_src",
      "$hilog_lite_deps_path",
      "//third_party/bounds_checking_function:libsec_shared",
    ]
  }
} else {
  config("dfx_dwarf_config") {
    visibility = [ "*:*" ]

    include_dirs = [
      "include",
      "$faultloggerd_frameworks_path/unwind/include",
      "$faultloggerd_interfaces_path/common",
    ]
  }

  ohos_source_set("dfx_dwarf_src") {
    public_configs = [ ":dfx_dwarf_config" ]

    sources = dfx_dwarf_sources

    deps = [
      "$faultloggerd_common_path/dfxlog:dfx_hilog",
      "$faultloggerd_common_path/dfxutil:dfx_util",
      "$faultloggerd_frameworks_path/unwind:dfx_unwind_src",
      "//third_party/bounds_checking_function:libsec_shared",
    ]

    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }
}
